collapse working correctly by targetting title instead of li. delete button listener working. next up: get it to work on API

--- a/main.css
+++ b/main.css
@@ -13,3 +13,11 @@ li {
   padding: 20px;
   list-style: none;
 }
+
+.js-title {
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
